--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_pressed.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_pressed.xml
@@ -3,5 +3,5 @@
        android:shape="rectangle" >
 
     <solid android:color="@color/orange_btn_pressed"/>
-    <corners android:radius="@dimen/button_corner_radius"/>
+    <corners android:radius="3dp"/>
 </shape>
