--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -11,6 +11,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:id="@+id/root"
         android:layout_height="match_parent"
         android:background="@color/white">
 
@@ -67,8 +68,8 @@
             android:id="@+id/background"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginStart="24dp"
             android:background="@drawable/edittext_background"
             app:layout_constraintBottom_toBottomOf="@+id/space"
             app:layout_constraintEnd_toEndOf="parent"
@@ -78,18 +79,22 @@
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tvCountryCode"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_height="0dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
             android:drawableEnd="@drawable/ic_arrow_down_vector"
             android:drawablePadding="3dp"
             android:hint="@string/code"
             android:includeFontPadding="false"
             android:text=""
             android:textColor="@color/text_color"
+            android:gravity="center"
             android:textSize="16sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/edtPhoneNo"
+            app:layout_constraintBottom_toBottomOf="@id/background"
             app:layout_constraintStart_toStartOf="@id/background"
-            app:layout_constraintTop_toTopOf="@id/glPhone"/>
+            app:layout_constraintTop_toTopOf="@id/background"/>
 
         <EditText
             android:id="@+id/edtPhoneNo"
