--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_splash.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_splash.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:fitsSystemWindows="true"
+    android:layout_height="match_parent">
 
 
     <ImageView
@@ -14,7 +14,6 @@
         android:src="@drawable/splash_driver_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         android:transitionName="logoTransition"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
