--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/driver_splash_activity.xml
@@ -3,49 +3,33 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="false"
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
+        android:theme="@style/AppTheme"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="?attr/actionBarSize"
             android:background="@color/black_top_bar_bg"
             android:textAlignment="center"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:layout_collapseMode="pin"
+
             app:titleTextColor="@color/white">
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <Button
-                    android:id="@+id/btBackToolbar"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:background="@drawable/back_btn_selector"
-                    android:tag="mwar"
-                    app:layout_constraintBaseline_toBaselineOf="@+id/tvToolbar"/>
-
-                <TextView
-                    android:id="@+id/tvToolbar"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:gravity="center"
-                    android:textAllCaps="true"
-                    android:textSize="18sp"
-                    android:textColor="@color/white"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-
-            </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvToolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textAllCaps="true"
+                android:textSize="18sp"
+                android:layout_gravity="center"
+                android:textColor="@color/white"/>
 
         </android.support.v7.widget.Toolbar>
 
