--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -75,5 +75,11 @@
         <item name="android:tag">mwar</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:fitsSystemWindows">false</item>
+        <item name="android:windowBackground">@drawable/app_startup_bg</item>
+    </style>
+
+
 
 </resources>
