animate view on login, add check in driver setup

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login_intial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login_intial.xml
@@ -10,7 +10,6 @@
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:animateLayoutChanges="true"
         android:id="@+id/constraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -22,7 +21,6 @@
             android:layout_centerVertical="true"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:gravity="center"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_orange_bordered"
             android:padding="4dp"
@@ -88,7 +86,7 @@
             android:layout_marginBottom="8dp"
             android:text="@string/label_edt_phone"
             android:textSize="17sp"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintHorizontal_bias="0.0"
@@ -99,7 +97,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="24dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_marginStart="24dp"
             android:background="@drawable/edittext_background"
             app:layout_constraintBottom_toBottomOf="@+id/space"
@@ -110,7 +108,7 @@
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tvCountryCode"
             android:layout_width="wrap_content"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_height="0dp"
             android:drawableEnd="@drawable/ic_arrow_down_vector"
             android:drawablePadding="3dp"
@@ -133,7 +131,7 @@
             android:layout_width="0dp"
             android:layout_height="32dp"
             android:layout_marginEnd="8dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:layout_marginStart="8dp"
             android:layout_marginTop="10dp"
             android:background="@null"
@@ -163,7 +161,7 @@
             android:background="@drawable/orange_btn_selector"
             android:minWidth="90dp"
             android:paddingEnd="15dp"
-            android:visibility="invisible"
+            android:visibility="gone"
             android:paddingStart="15dp"
             android:text="@string/btn_text_OTP"
             android:textColor="@android:color/white"
