change background color to white, driver document activity crash fix

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -12,6 +12,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:animateLayoutChanges="true"
         android:id="@+id/constraint"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
