--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/button_white_theme_border.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/button_white_theme_border.xml
@@ -3,7 +3,7 @@
 
     <item  android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/grey_light"/>
+            <solid android:color="@color/white_light_dark"/>
             <stroke android:color="@color/theme_color_alpha"
                     android:width="1dp"/>
             <corners android:radius="3dp"/>
