--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/graph_marker.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/graph_marker.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="120px"
-                android:layout_height="64px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="60dp"
+                android:minHeight="30dp"
                 android:background="@drawable/background_white_rounded_bordered_new">
 
 
@@ -12,20 +14,12 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="100"
-            android:textSize="24px"
+            android:textSize="12sp"
             android:textColor="@color/red_v2"
             android:ellipsize="end"
             android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <ImageView
-            android:id="@+id/arrow"
-            android:layout_width="15px"
-            android:layout_height="9px"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="12px"
-            android:src="@drawable/red_arrow_v2"/>
 
 
 </RelativeLayout>
