--- a/JugnooNewDriver/hippo/src/main/res/values/dimens.xml
+++ b/JugnooNewDriver/hippo/src/main/res/values/dimens.xml
@@ -64,4 +64,6 @@
     <dimen name="fugu_min_height">60dp</dimen>
     <dimen name="button_width">200dp</dimen>
     <dimen name="button_height">50dp</dimen>
+    <dimen name="dropshadow_width">0.5dp</dimen>
+    <dimen name="button_corner_radius">2dp</dimen>
 </resources>
