jugnoo_wl: dialog buttons ui changed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/dialog_background_color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/dialog_background_color.xml
@@ -14,7 +14,7 @@
     
     <stroke 
         android:width="2px" 
-        android:color="#aa7e7d78"
+        android:color="@color/dialog_border_color"
         />
     
     
