--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_delivery_return_reason.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_delivery_return_reason.xml
@@ -55,31 +55,23 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="40px"
-                android:layout_marginLeft="45px"
-                android:layout_marginRight="45px"
+                android:layout_marginLeft="75px"
+                android:layout_marginRight="75px"
                 android:layout_marginBottom="25px"
                 android:splitMotionEvents="false"
                 >
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnCancel"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
+                    style="@style/DialogButtonGrey"
                     android:text="@string/cancel"
-                    android:background="@drawable/new_menu_black_btn_selector_rounded"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
                     />
 
                 <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                     android:id="@+id/btnSubmit"
-                    android:layout_width="260px"
-                    android:layout_height="70px"
-                    android:background="@drawable/new_orange_btn_selector_rounded"
+                    style="@style/DialogButtonOrange"
                     android:text="@string/submit"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     />
             </RelativeLayout>
 
