--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_loading.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_loading.xml
@@ -46,13 +46,18 @@
                 android:layout_gravity="center_horizontal"
                 />
 
-            <ProgressBar
-                android:id="@+id/progressBar1"
-                android:layout_width="86px"
-                android:layout_height="86px"
-                android:layout_marginTop="15px"
-                android:layout_gravity="center_horizontal"
-                />
+                <product.clicklabs.jugnoo.driver.utils.ProgressWheel
+                    xmlns:wheel="http://schemas.android.com/apk/res-auto"
+                    android:layout_width="43dp"
+                    android:layout_height="43dp"
+                    android:tag="@string/dont_touch_me"
+                    wheel:matProg_barColor="@color/white"
+                    wheel:matProg_barWidth="3dp"
+                    wheel:matProg_fillRadius="true"
+                    wheel:matProg_progressIndeterminate="true"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    />
             </LinearLayout>
             
             
