--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ride_request_timeout.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_ride_request_timeout.xml
@@ -60,12 +60,17 @@
 
                 />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/dialog_border_color"
+                android:layout_marginTop="32px"
+                />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="92px"
-            android:orientation="horizontal"
-            android:layout_marginTop="32px"
-            android:background="@drawable/new_orange_btn_top_normal_bottom_rounded">
+            android:orientation="horizontal">
 
             <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                 android:id="@+id/timeOutText"
@@ -73,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32px"
                 android:text="@string/time_left"
-                android:textColor="@drawable/white_color_selector"
+                android:textColor="@color/theme_color"
                 android:textSize="@dimen/button_text_size"
                 android:layout_gravity="center_vertical"
                 />
@@ -83,10 +88,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="58px"
-                android:background="@color/new_orange"
                 android:singleLine="true"
                 android:text="@string/ok"
-                android:textColor="@drawable/white_color_selector"
+                android:textColor="@color/theme_color"
                 android:textSize="72px"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
