--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_delivery_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_delivery_details.xml
@@ -117,7 +117,7 @@
                     android:layout_marginLeft="0px"
                     android:singleLine="true"
                     android:layout_marginTop="4px"
-                    android:text="Ride Distance: 5.6 Km"
+                    android:text="Ride Distance:"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="28px"/>
 
@@ -140,7 +140,7 @@
                     android:layout_height="38px"
                     android:layout_marginLeft="0px"
                     android:singleLine="true"
-                    android:text="Return Distance: 4 Km"
+                    android:text="Return Distance:"
                     android:layout_marginTop="4px"
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="28px"
