--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_ride_history.xml
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="0px"
                     android:singleLine="true"
-                    android:text="5.6 Km,"
+                    android:text="5.6 "
                     android:textColor="@color/bg_grey_opaque"
                     android:textSize="30px"/>
 
